// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Send - test Send currency USD, privacy high & mode advanced - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "backgroundColor": "#011401",
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "left": 10,
          "position": "absolute",
          "top": 10,
          "width": 75,
          "zIndex": 999,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#011401",
            "borderColor": "#c3c3c3",
            "borderRadius": 25,
            "borderWidth": 1,
            "margin": 10,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <
            color="#c3c3c3"
            icon={
              {
                "icon": [
                  320,
                  512,
                  [
                    9001,
                  ],
                  "f053",
                  "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            size={30}
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
          "paddingBottom": NaN,
          "paddingHorizontal": 16,
          "paddingTop": undefined,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 25,
                "fontWeight": "600",
                "opacity": 1,
              }
            }
          >
            Send
          </Text>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginBottom": 20,
                "marginTop": 5,
                "opacity": 0.65,
              }
            }
          >
            texto
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "marginHorizontal": 10,
                  "opacity": 1,
                }
              }
            >
              To:
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": undefined,
                "borderColor": "#ffffff",
                "borderRadius": 25,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "maxWidth": 520,
                "minHeight": 48,
                "minWidth": "50%",
                "paddingHorizontal": 25,
                "paddingVertical": 7,
                "width": "100%",
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              editable={true}
              keyboardType="default"
              onChangeText={[Function]}
              placeholder="Paste the Address"
              placeholderTextColor="#888888"
              returnKeyType="done"
              style={
                {
                  "backgroundColor": "transparent",
                  "color": "#c3c3c3",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "marginLeft": 5,
                  "minHeight": 48,
                }
              }
              testID="import.seedufvkinput"
              value="UA-12345678901234567890"
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#888888",
                    "borderRadius": 11,
                    "height": 22,
                    "justifyContent": "center",
                    "padding": 0,
                    "width": 22,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#011401",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "marginTop": -3,
                      "opacity": 1,
                    }
                  }
                >
                  x
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="text translated"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="send.scan-button"
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f029",
                      "M64 160l64 0 0-64-64 0 0 64zM0 80C0 53.5 21.5 32 48 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48L0 80zM64 416l64 0 0-64-64 0 0 64zM0 336c0-26.5 21.5-48 48-48l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96zM320 96l0 64 64 0 0-64-64 0zM304 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zM288 352a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm96 32c0-17.7 14.3-32 32-32s32 14.3 32 32-14.3 32-32 32-32-14.3-32-32zm32-96a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm-32 32a32 32 0 1 1 -64 0 32 32 0 1 1 64 0z",
                    ],
                    "iconName": "qrcode",
                    "prefix": "fas",
                  }
                }
                size={22}
                style={
                  {
                    "marginLeft": 10,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
                "marginTop": 10,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "50%",
                  "paddingHorizontal": 25,
                  "paddingVertical": 2,
                  "width": "50%",
                }
              }
            >
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                keyboardType="numeric"
                maxLength={20}
                onChangeText={[Function]}
                onEndEditing={[Function]}
                placeholder="0.00000"
                placeholderTextColor="#888888"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 25,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="1.12345678"
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#888888",
                      "borderRadius": 11,
                      "height": 22,
                      "justifyContent": "center",
                      "padding": 0,
                      "width": 22,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#011401",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "marginTop": -3,
                        "opacity": 1,
                      }
                    }
                  >
                    x
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 36,
                  "fontWeight": "600",
                  "opacity": 1,
                }
              }
            >
               ZEC
            </Text>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "baseline",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginTop": 0,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    Available:
                  </Text>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "fontWeight": "900",
                        "marginHorizontal": 5,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": false,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "red",
                              "fontSize": 15,
                              "fontWeight": "700",
                              "margin": 0,
                              "padding": 0,
                            }
                          }
                        >
                           -.-----
                        </Text>
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={15}
                          bbWidth={30}
                          fill="red"
                          focusable={false}
                          height={15}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "marginBottom": 0.75,
                              },
                              {
                                "flex": 0,
                                "height": 15,
                                "width": 30,
                              },
                            ]
                          }
                          vbHeight={147.85}
                          vbWidth={282.84}
                          width={30}
                          xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294901760,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": undefined,
                      "borderRadius": 10,
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "marginLeft": 10,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    Max.
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#011401",
                    "borderRadius": 10,
                    "display": "flex",
                    "flexDirection": "row",
                    "marginTop": 0,
                    "padding": 5,
                  }
                }
              >
                <
                  color="#18bd18"
                  icon={
                    {
                      "icon": [
                        512,
                        512,
                        [
                          "info-circle",
                        ],
                        "f05a",
                        "M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z",
                      ],
                      "iconName": "circle-info",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                  style={
                    {
                      "marginRight": 5,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 12.5,
                      "opacity": 0.65,
                    }
                  }
                >
                  text translated
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": "auto",
          "paddingBottom": 20,
          "paddingTop": 10,
        }
      }
    >
      <View
        accessibilityLabel="title text translated"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#5a8c5a",
            "borderColor": "#5a8c5a",
            "borderRadius": 25,
            "borderWidth": 1,
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "80%",
          }
        }
        testID="send.button-disabled"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 18,
                "fontWeight": "normal",
                "textAlign": "center",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component Send - test Send no currency, privacy normal & mode basic - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "backgroundColor": "#011401",
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "left": 10,
          "position": "absolute",
          "top": 10,
          "width": 75,
          "zIndex": 999,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#011401",
            "borderColor": "#c3c3c3",
            "borderRadius": 25,
            "borderWidth": 1,
            "margin": 10,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <
            color="#c3c3c3"
            icon={
              {
                "icon": [
                  320,
                  512,
                  [
                    9001,
                  ],
                  "f053",
                  "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            size={30}
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
          "paddingBottom": NaN,
          "paddingHorizontal": 16,
          "paddingTop": undefined,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 25,
                "fontWeight": "600",
                "opacity": 1,
              }
            }
          >
            Send
          </Text>
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginBottom": 20,
                "marginTop": 5,
                "opacity": 0.65,
              }
            }
          >
            texto
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "marginHorizontal": 10,
                  "opacity": 1,
                }
              }
            >
              To:
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": undefined,
                "borderColor": "#ffffff",
                "borderRadius": 25,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 10,
                "maxWidth": 520,
                "minHeight": 48,
                "minWidth": "50%",
                "paddingHorizontal": 25,
                "paddingVertical": 7,
                "width": "100%",
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              autoCorrect={false}
              editable={true}
              keyboardType="default"
              onChangeText={[Function]}
              placeholder="Paste the Address"
              placeholderTextColor="#888888"
              returnKeyType="done"
              style={
                {
                  "backgroundColor": "transparent",
                  "color": "#c3c3c3",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "marginLeft": 5,
                  "minHeight": 48,
                }
              }
              testID="import.seedufvkinput"
              value="UA-12345678901234567890"
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#888888",
                    "borderRadius": 11,
                    "height": 22,
                    "justifyContent": "center",
                    "padding": 0,
                    "width": 22,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#011401",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "marginTop": -3,
                      "opacity": 1,
                    }
                  }
                >
                  x
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="text translated"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="send.scan-button"
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f029",
                      "M64 160l64 0 0-64-64 0 0 64zM0 80C0 53.5 21.5 32 48 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48L0 80zM64 416l64 0 0-64-64 0 0 64zM0 336c0-26.5 21.5-48 48-48l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96zM320 96l0 64 64 0 0-64-64 0zM304 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zM288 352a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm96 32c0-17.7 14.3-32 32-32s32 14.3 32 32-14.3 32-32 32-32-14.3-32-32zm32-96a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm-32 32a32 32 0 1 1 -64 0 32 32 0 1 1 64 0z",
                    ],
                    "iconName": "qrcode",
                    "prefix": "fas",
                  }
                }
                size={22}
                style={
                  {
                    "marginLeft": 10,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
                "marginTop": 10,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "50%",
                  "paddingHorizontal": 25,
                  "paddingVertical": 2,
                  "width": "50%",
                }
              }
            >
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                keyboardType="numeric"
                maxLength={20}
                onChangeText={[Function]}
                onEndEditing={[Function]}
                placeholder="0.00000"
                placeholderTextColor="#888888"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 25,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="1.12345678"
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#888888",
                      "borderRadius": 11,
                      "height": 22,
                      "justifyContent": "center",
                      "padding": 0,
                      "width": 22,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#011401",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "marginTop": -3,
                        "opacity": 1,
                      }
                    }
                  >
                    x
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 36,
                  "fontWeight": "600",
                  "opacity": 1,
                }
              }
            >
               ZEC
            </Text>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "baseline",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginTop": 0,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    Available:
                  </Text>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "fontWeight": "900",
                        "marginHorizontal": 5,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": true,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={false}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "red",
                              "fontSize": 15,
                              "fontWeight": "700",
                              "margin": 0,
                              "padding": 0,
                            }
                          }
                          testID="undefined.big-part"
                        >
                          1.12346
                        </Text>
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={15}
                          bbWidth={30}
                          fill="red"
                          focusable={false}
                          height={15}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "marginBottom": 0.75,
                              },
                              {
                                "flex": 0,
                                "height": 15,
                                "width": 30,
                              },
                            ]
                          }
                          vbHeight={147.85}
                          vbWidth={282.84}
                          width={30}
                          xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294901760,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": undefined,
                      "borderRadius": 10,
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "marginLeft": 10,
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    Max.
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#011401",
                    "borderRadius": 10,
                    "display": "flex",
                    "flexDirection": "row",
                    "marginTop": 0,
                    "padding": 5,
                  }
                }
              >
                <
                  color="#18bd18"
                  icon={
                    {
                      "icon": [
                        512,
                        512,
                        [
                          "info-circle",
                        ],
                        "f05a",
                        "M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z",
                      ],
                      "iconName": "circle-info",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                  style={
                    {
                      "marginRight": 5,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 12.5,
                      "opacity": 0.65,
                    }
                  }
                >
                  text translated
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": "auto",
          "paddingBottom": 20,
          "paddingTop": 10,
        }
      }
    >
      <View
        accessibilityLabel="title text translated"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#5a8c5a",
            "borderColor": "#5a8c5a",
            "borderRadius": 25,
            "borderWidth": 1,
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "80%",
          }
        }
        testID="send.button-disabled"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 18,
                "fontWeight": "normal",
                "textAlign": "center",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
